[package]
name = "raft-kv-store"
version = "0.1.0"
edition = "2024"
description = "Opinionated Raft KV store"
license = "Apache-2.0"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
byteorder = "1.5.0"
env_logger = "0.11.8"
log = "0.4.28"
protobuf = "2.28.0"
raft = "0.7.0"
raft-proto = { version = "0.7.0", features = ["protobuf-codec"] }
rusqlite = { version = "0.37.0", features = ["blob", "bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.19"
thiserror = "1.0.65"
tiny_http = "0.12.0"
serde_json = "1.0.117"
percent-encoding = "2.3.1"
slog = "2.7.0"
slog-async = "2.8.0"
slog-stdlog = "4.1.0"
